Source version 2.1.7 based on SVN revision 4012