@@ -1,6 +1,5 @@
 /*
- * $Id: Chunk.java 3048 2007-12-01 10:33:01Z blowagie $
- * $Name$
+ * $Id: Chunk.java 3427 2008-05-24 18:32:31Z xlv $
  *
  * Copyright 1999, 2000, 2001, 2002 by Bruno Lowagie.
  *
@@ -54,13 +53,12 @@ import java.awt.Color;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.Hashtable;
-import java.util.Set;
 
 import com.lowagie.text.pdf.HyphenationEvent;
 import com.lowagie.text.pdf.PdfAction;
 import com.lowagie.text.pdf.PdfAnnotation;
 import com.lowagie.text.pdf.PdfContentByte;
+import com.lowagie.text.pdf.draw.DrawInterface;
 
 /**
  * This is the smallest significant part of text that can be added to a
@@ -88,7 +86,7 @@ public class Chunk implements Element {
 
 	// public static membervariables
 
-	/** The character stand in for an image. */
+	/** The character stand in for an image or a separator. */
 	public static final String OBJECT_REPLACEMENT_CHARACTER = "\ufffc";
 
 	/** This is a Chunk containing a newline. */
@@ -206,6 +204,67 @@ public class Chunk implements Element {
 	}
 
 	/**
+	 * Key for drawInterface of the Separator.
+	 * @since	2.1.2
+	 */
+	public static final String SEPARATOR = "SEPARATOR";
+	
+	/**
+	 * Creates a separator Chunk.
+     * Note that separator chunks can't be used in combination with tab chunks!
+	 * @param	separator	the drawInterface to use to draw the separator.
+	 * @since	2.1.2
+	 */
+	public Chunk(DrawInterface separator) {
+		this(separator, false);
+	}	
+	
+	/**
+	 * Creates a separator Chunk.
+     * Note that separator chunks can't be used in combination with tab chunks!
+	 * @param	separator	the drawInterface to use to draw the separator.
+	 * @param	vertical	true if this is a vertical separator
+	 * @since	2.1.2
+	 */
+	public Chunk(DrawInterface separator, boolean vertical) {
+		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
+		setAttribute(SEPARATOR, new Object[] {separator, Boolean.valueOf(vertical)});
+	}
+
+	/**
+	 * Key for drawInterface of the tab.
+	 * @since	2.1.2
+	 */
+	public static final String TAB = "TAB";
+	
+	/**
+	 * Creates a tab Chunk.
+     * Note that separator chunks can't be used in combination with tab chunks!
+	 * @param	separator	the drawInterface to use to draw the tab.
+	 * @param	tabPosition	an X coordinate that will be used as start position for the next Chunk.
+	 * @since	2.1.2
+	 */
+	public Chunk(DrawInterface separator, float tabPosition) {
+		this(separator, tabPosition, false);
+	}
+	
+	/**
+	 * Creates a tab Chunk.
+     * Note that separator chunks can't be used in combination with tab chunks!
+	 * @param	separator	the drawInterface to use to draw the tab.
+	 * @param	tabPosition	an X coordinate that will be used as start position for the next Chunk.
+	 * @param	newline		if true, a newline will be added if the tabPosition has already been reached.
+	 * @since	2.1.2
+	 */
+	public Chunk(DrawInterface separator, float tabPosition, boolean newline) {
+		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
+		if (tabPosition < 0) {
+			throw new IllegalArgumentException("A tab position may not be lower than 0; yours is " + tabPosition);
+		}
+		setAttribute(TAB, new Object[] {separator, new Float(tabPosition), Boolean.valueOf(newline), new Float(0)});
+	}
+
+	/**
 	 * Constructs a chunk containing an <CODE>Image</CODE>.
 	 * 
 	 * @param image
@@ -221,7 +280,7 @@ public class Chunk implements Element {
 			boolean changeLeading) {
 		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
 		setAttribute(IMAGE, new Object[] { image, new Float(offsetX),
-				new Float(offsetY), new Boolean(changeLeading) });
+				new Float(offsetY), Boolean.valueOf(changeLeading) });
 	}
 
 	// implementation of the Element-methods
@@ -469,8 +528,7 @@ public class Chunk implements Element {
 			attributes = new HashMap();
 		Object obj[] = {
 				color,
-				new float[] { thickness, thicknessMul, yPosition, yPositionMul,
-						(float) cap } };
+				new float[] { thickness, thicknessMul, yPosition, yPositionMul, cap } };
 		Object unders[][] = Utilities.addToArray((Object[][]) attributes.get(UNDERLINE),
 				obj);
 		return setAttribute(UNDERLINE, unders);
@@ -495,7 +553,7 @@ public class Chunk implements Element {
 	}
 
 	/**
-	 * Gets the text displacement relatiev to the baseline.
+	 * Gets the text displacement relative to the baseline.
 	 * 
 	 * @return a displacement in points
 	 */
@@ -799,6 +857,15 @@ public class Chunk implements Element {
 	public boolean isNestable() {
 		return true;
 	}
+
+	/**
+     * Returns the hyphenation (if present).
+     * @since	2.1.2
+	 */
+    public HyphenationEvent getHyphenation() {
+        if (attributes == null) return null;
+        return (HyphenationEvent) attributes.get(Chunk.HYPHENATION);
+	}
 	
 	// keys used in PdfChunk
 	
@@ -807,72 +874,5 @@ public class Chunk implements Element {
 
 	/** Key for encoding. */
 	public static final String ENCODING = "ENCODING";
-	
-	// deprecated
 
-	/**
-	 * Returns a <CODE>Chunk</CODE> that has been constructed taking in
-	 * account the value of some <VAR>attributes </VAR>.
-	 * 
-	 * @param attributes
-	 *            Some attributes
-	 * @deprecated As of iText 2.0.3, use {@link com.lowagie.text.factories.ElementFactory#getChunk(Properties)} instead,
-	 * scheduled for removal at 2.1.0
-	 */
-
-	public Chunk(java.util.Properties attributes) {
-		this(com.lowagie.text.factories.ElementFactory.getChunk(attributes));
-	}
-
-	/**
-	 * Returns the content of this <CODE>Chunk</CODE>.
-	 * 
-	 * @return a <CODE>String</CODE>
-	 * @deprecated As of iText 2.0.3, replaced by {@link #getContent()},
-	 * scheduled for removal at 2.1.0
-	 */
-	public String content() {
-		return getContent();
-	}
-
-	/**
-	 * Gets the font of this <CODE>Chunk</CODE>.
-	 * 
-	 * @return a <CODE>Font</CODE>
-	 * @deprecated As of iText 2.0.3, replaced by {@link #getFont()},
-	 * scheduled for removal at 2.1.0
-	 */
-	
-	public Font font() {
-		return getFont();
-	}
-
-	/**
-	 * Gets the keys of a Hashtable
-	 * 
-	 * @param table
-	 *            a Hashtable
-	 * @return the keyset of a Hashtable (or an empty set if table is null)
-	 * @deprecated As of iText 2.0.3, replaced by {@link Utilities#getKeySet(Hashtable)},
-	 * scheduled for removal at 2.1.0
-	 */
-	public static Set getKeySet(Hashtable table) {
-		return Utilities.getKeySet(table);
-	}
-	
-	/**
-	 * Utility method to extend an array.
-	 * 
-	 * @param original
-	 *            the original array or <CODE>null</CODE>
-	 * @param item
-	 *            the item to be added to the array
-	 * @return a new array with the item appended
-	 * 
-	 * @deprecated As of iText 2.0.3, replaced by {@link Utilities#addToArray(Object[][],Object[])},
-	 * scheduled for removal at 2.1.0
-	 */
-	public static Object[][] addToArray(Object original[][], Object item[]) {
-		return Utilities.addToArray(original, item);
-	}
 }
